; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/exca/extr_exca.c_exca_mem_unmap_res.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/exca/extr_exca.c_exca_mem_unmap_res.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.exca_softc = type { i32 }
%struct.resource = type { i32 }

@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @exca_mem_unmap_res(%struct.exca_softc* %0, %struct.resource* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.exca_softc*, align 8
  %5 = alloca %struct.resource*, align 8
  %6 = alloca i32, align 4
  store %struct.exca_softc* %0, %struct.exca_softc** %4, align 8
  store %struct.resource* %1, %struct.resource** %5, align 8
  %7 = load %struct.exca_softc*, %struct.exca_softc** %4, align 8
  %8 = load %struct.resource*, %struct.resource** %5, align 8
  %9 = call i32 @exca_mem_findmap(%struct.exca_softc* %7, %struct.resource* %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i32, i32* @ENOENT, align 4
  store i32 %13, i32* %3, align 4
  br label %18

14:                                               ; preds = %2
  %15 = load %struct.exca_softc*, %struct.exca_softc** %4, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @exca_mem_unmap(%struct.exca_softc* %15, i32 %16)
  store i32 0, i32* %3, align 4
  br label %18

18:                                               ; preds = %14, %12
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @exca_mem_findmap(%struct.exca_softc*, %struct.resource*) #1

declare dso_local i32 @exca_mem_unmap(%struct.exca_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
